tests/models/enum/unnamed/f64/fail/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(gt = 2)]
        f64
    ),
}
fn main() {}
